--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -18,6 +18,7 @@ $font-family-monospace:  "Source Code Pro", Menlo, Monaco, Consolas, "Courier Ne
 // Border radius
 $border-radius:     0.5rem !default;
 $border-radius-lg:  1rem   !default;
+$input-border-radius: 1.5rem   !default;
 
 // Breakpoints
 $break-sm: 576px !default;
