--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -26,6 +26,7 @@
 @import "pages/about";
 @import "pages/kontakt";
 @import "pages/katalog";
+@import "pages/serwis";
 
 // 8) Theme Overrides (utility classes, code block, container)
 @import "themes/default";
