--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -11,6 +11,8 @@ $body-color:    #212529 !default;
 $font-color-secondary:    #898682 !default;
 $font-color-gray-60: #778294;
 $color-status-error: #ff0000;
+$form-check-input-checked-color: #E21E26 !default;
+
 // Typography
 $font-family-sans-serif: "Inter", system-ui, -apple-system, "Segoe UI", Roboto, Arial, "Noto Sans", sans-serif !default;
 $font-family-monospace:  "Source Code Pro", Menlo, Monaco, Consolas, "Courier New", monospace !default;
