--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -13068,8 +13068,32 @@ input:checked + .kontakt-form .disclaimer__icon {
 }
 
 .serwis-form input[type=radio] {
-  accent-color: #E11D48;
-  --bs-form-check-color: $danger;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  width: 1.25rem;
+  height: 1.25rem;
+  border: 2px solid #E21E26;
+  border-radius: 50%;
+  background-color: #fff;
+  position: relative;
+  margin-top: 0.25rem;
+  cursor: pointer;
+}
+.serwis-form input[type=radio]::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 0.625rem; /* half of 1.25rem */
+  height: 0.625rem;
+  background: #E21E26;
+  border-radius: 50%;
+  transform: translate(-50%, -50%) scale(0);
+  transition: transform 0.15s ease-in-out;
+}
+.serwis-form input[type=radio]:checked::after {
+  transform: translate(-50%, -50%) scale(1);
 }
 
 .serwis-form .form-check-input {
