--- a/src/scss/pages/_serwis.scss
+++ b/src/scss/pages/_serwis.scss
@@ -57,9 +57,37 @@
 }
 
 .serwis-form input[type="radio"] {
-  accent-color: $danger;
-  --bs-form-check-color: $danger;
+  // remove default appearance
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 
+  // size and outer ring
+  width: 1.25rem;
+  height: 1.25rem;
+  border: 2px solid #E21E26;
+  border-radius: 50%;
+  background-color: #fff;
+  position: relative;
+  margin-top: 0.25rem;
+  cursor: pointer;
+
+  // center dot when checked
+  &::after {
+    content: "";
+    position: absolute;
+    top: 50%; left: 50%;
+    width: 0.625rem;  /* half of 1.25rem */
+    height: 0.625rem;
+    background: #E21E26;
+    border-radius: 50%;
+    transform: translate(-50%, -50%) scale(0);
+    transition: transform .15s ease-in-out;
+  }
+
+  &:checked::after {
+    transform: translate(-50%, -50%) scale(1);
+  }
 }
 
 // 5) Radio buttons
