--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -13073,7 +13073,7 @@ input:checked + .kontakt-form .disclaimer__icon {
   appearance: none;
   width: 1.25rem;
   height: 1.25rem;
-  border: 2px solid #E21E26;
+  border: 2px solid #778294;
   border-radius: 50%;
   background-color: #fff;
   position: relative;
@@ -13085,12 +13085,15 @@ input:checked + .kontakt-form .disclaimer__icon {
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 0.625rem; /* half of 1.25rem */
+  width: 0.625rem;
   height: 0.625rem;
-  background: #E21E26;
+  background: #E11D48;
   border-radius: 50%;
   transform: translate(-50%, -50%) scale(0);
   transition: transform 0.15s ease-in-out;
+}
+.serwis-form input[type=radio]:checked {
+  border-color: #E11D48;
 }
 .serwis-form input[type=radio]:checked::after {
   transform: translate(-50%, -50%) scale(1);
