Navbar and About section updates

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -12042,7 +12042,7 @@ label {
 }
 @media (min-width: 992px) {
   .navbar .navbar-logo {
-    height: 3rem;
+    height: 3.5rem;
   }
 }
 .navbar .nav-link {
@@ -12063,7 +12063,7 @@ label {
 }
 @media (min-width: 992px) {
   .navbar .nav-link.active::after {
-    bottom: -26px;
+    bottom: -29px;
   }
 }
 .navbar .nav-link:hover {
@@ -12307,48 +12307,49 @@ label {
 
 .hero-section {
   position: relative;
-  min-height: 80vh;
+  min-height: 100vh;
   display: flex;
   background: url("../img/hero-bg.png") center/cover no-repeat;
 }
 .hero-section .overlay {
   position: absolute;
   inset: 0;
-  background-color: rgba(0, 0, 0, 0.35);
+  background-color: rgba(0, 0, 0, 0.1);
 }
 .hero-section .hero-content {
   position: absolute;
   z-index: 1;
   color: #fff;
-  padding: 2rem 1rem;
-  top: 12%;
-  left: 15%;
-  max-width: 40%;
+  padding: 0;
+  top: 10%;
+  left: 19%;
+  max-width: 31%;
 }
 .hero-section .hero-content h1, .hero-section .hero-content .h1 {
   font-size: 2.5rem;
 }
 @media (min-width: 768px) {
   .hero-section .hero-content h1, .hero-section .hero-content .h1 {
-    font-size: 3rem;
+    font-size: 2.7rem;
   }
 }
 @media (min-width: 992px) {
   .hero-section .hero-content h1, .hero-section .hero-content .h1 {
-    font-size: 3.75rem;
+    font-size: 3rem;
   }
 }
 .hero-section .hero-content h1, .hero-section .hero-content .h1 {
-  font-weight: 700;
   line-height: 1.2;
-  margin-bottom: 1rem;
+  margin: 0.5rem 0 1.2rem 0;
 }
 .hero-section .hero-content p.lead {
-  font-size: 1.125rem;
+  font-size: 1rem;
+  font-weight: 400;
+  color: #ced4da;
 }
 @media (min-width: 768px) {
   .hero-section .hero-content p.lead {
-    font-size: 1.25rem;
+    font-size: 1rem;
   }
 }
 .hero-section .hero-content p.lead {
